added some past changes to skills

--- a/0ctastad_resume_master.tex
+++ b/0ctastad_resume_master.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	PREAMBLE
 
-\documentclass[10pt,letter,sans]{moderncv/moderncv}
+\documentclass[10pt,letter,sans]{moderncv}
 
 \moderncvstyle{banking}
 \moderncvcolor{blue}
@@ -69,15 +69,8 @@ Taken together, I would appreciate further consideration and an opportunity to i
 %   SKILLS
 
 \section{Skills}
-\cvitem{Languages}{\textsc{r}, \textsc{sql}, \textsc{xml}, \textsc{html}, \textsc{css}, \textrm{\LaTeX}}
-\cvitem{Platforms}{Linux, \textsc{git}, \textsc{nginx}, \textsc{apache}, Relational Databases, Oracle, Rstudio, Vim, MS Office, LibreOffice}
-\cvitem{Packages}{rmarkdown, shiny, ggplot2, dplyr, tidyr, tibble, readr, purrr, BioC}
-\cvitem{Statistics}{Hypothesis testing, Simple/Multiple/Poisson Regression, A/B Testing, Contingency Testing, ANOVA, Survival Analysis, K-means, PCA, K-nearest neighbor, SVM, Bayesian Networks, Functional Linkage Networks}
-\cvitem{Benchwork}{DNA/RNA/protein isolation and analysis, western blotting, PCR, ELISA, luciferase, immunostaining, histology, epigenetic analysis, FACS, mammalian cell culture}
 
-\section{Skills}
-
-\cvitem{Languages}{\textsc{R}, \textrm{\LaTeX}, \textsc{sql}, \textsc{bash}, \textsc{html}, \textsc{css}, \textsc{xml}}
+\cvitem{Languages}{\textsc{R}, \textsc{bash}, \textrm{\LaTeX}, \textsc{sql}, \textsc{html}, \textsc{css}, \textsc{xml}}
 \cvitem{Platforms}{Linux, \textsc{git}, \textsc{nginx}, \textsc{apache}, Relational Databases, Oracle, Vim, wordpress,
 virtual machines, proxmox, docker containerization, HPC, vector graphics, visualization}
 \cvitem{Packages}{rmarkdown, shiny, ggplot2, dplyr, tidyr, BioC, SummarizedExperiment, DNAcopy, GRL PACKAGES}
@@ -92,9 +85,9 @@ culture}
 
 \section{Experience}
 % starrlab research assistant
-\cventry{May 2019 --- Present}{Department of Department of OBGYN}{Graduate Research Assistant}{Minneapolis, MN}{Starr Lab}{%
+\cventry{May 2019 --- Present}{Department of OBGYN}{Graduate Research Assistant}{Minneapolis, MN}{Starr Lab}{%
     \begin{itemize}
-        \item{}
+        \item{test}
         \item{}
         \item{}
 \end{itemize}}
