--- a/0ctastad_resume_master.tex
+++ b/0ctastad_resume_master.tex
@@ -1,5 +1,6 @@
 %-------------------------------------------------------------------------------
 %	PREAMBLE
+%-------------------------------------------------------------------------------
 
 \documentclass[10pt,letter,sans]{moderncv}
 
@@ -29,7 +30,10 @@
 \begin{document}
 
 %-------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 %   LETTER
+%-------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 
 \title{Letter}
 \recipient{HR Department}{\company{} \\ STREET ADDRESS \\ CITY, STATE ZIP}
@@ -55,7 +59,10 @@ Taken together, I would appreciate further consideration and an opportunity to i
 \clearpage
 
 %-------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 %   RESUME
+%-------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 
 \title{Resume}
 \makecvtitle{}
@@ -67,27 +74,28 @@ Taken together, I would appreciate further consideration and an opportunity to i
 
 %-------------------------------------------------------------------------------
 %   SKILLS
+%-------------------------------------------------------------------------------
 
 \section{Skills}
 
 \cvitem{Languages}{\textsc{R}, \textsc{bash}, \textrm{\LaTeX}, \textsc{sql}, \textsc{html}, \textsc{css}, \textsc{xml}}
 \cvitem{Platforms}{Linux, \textsc{git}, \textsc{nginx}, \textsc{apache}, Relational Databases, Oracle, Vim, wordpress,
-virtual machines, proxmox, docker containerization, HPC, vector graphics, visualization}
+virtualization, proxmox, docker, HPC, vector graphics, visualization}
 \cvitem{Packages}{rmarkdown, shiny, ggplot2, dplyr, tidyr, BioC, SummarizedExperiment, DNAcopy, GRL PACKAGES}
 \cvitem{Genomics}{samtools, bwa-mem, CNV (VarScan2, Excavator), Single Cell (Seurat)}
 \cvitem{Statistics}{Hypothesis testing, Simple/Multiple/Poisson Regression, A/B Testing, Contingency Testing, ANOVA, Survival Analysis, K-means, PCA, K-nearest neighbor, SVM,
 Bayesian Networks, Functional Linkage Networks}
-\cvitem{Benchwork}{DNA/RNA/protein isolation and analysis, western blotting, PCR, ELISA, luciferase, immunostaining, histology, epigenetic analysis, FACS, mammalian cell
-culture}
+\cvitem{Benchwork}{DNA/RNA/protein isolation and analysis, western blotting, PCR, ELISA, luciferase, immunostaining, histology, epigenetic analysis, FACS, mammalian cell culture}
 
 %-------------------------------------------------------------------------------
 %   EXPERIENCE
+%-------------------------------------------------------------------------------
 
 \section{Experience}
 % starrlab research assistant
 \cventry{May 2019 --- Present}{Department of OBGYN}{Graduate Research Assistant}{Minneapolis, MN}{Starr Lab}{%
     \begin{itemize}
-        \item{test}
+        \item{Conducted full stack rewrite of cancer gene web app; implementing new framework, dramatically reducing code base, and eliminating need for SQL database.}
         \item{}
         \item{}
 \end{itemize}}
@@ -169,6 +177,7 @@ culture}
 
 %-------------------------------------------------------------------------------
 %	PERSONAL
+%-------------------------------------------------------------------------------
 
 \section{Personal}
 \cvitem{Hobbies}{Racquetball, CAD design \& 3d printing, Camping, Fishing, Hunting, Reading, Self-hosting software}
@@ -186,6 +195,7 @@ culture}
 
 %-------------------------------------------------------------------------------
 %	PUBLICATIONS
+%-------------------------------------------------------------------------------
 
 \bibliographystyle{unsrt}
 \nocite{refsearch,pmid22848585,pmid21425413,pmid20956382,pmid20705734}
