changed name of file

--- a/ctastad_cv_master.tex
+++ b/ctastad_cv_master.tex
@@ -20,7 +20,8 @@
 
 % contact info
 \name{Christopher}{Tastad}
-\address{720 Washington Ave S \#507}{Minneapolis, MN 55415}{USA}
+%\address{720 Washington Ave S \#507}{Minneapolis, MN 55415}{USA}
+\address{}{}{}
 \phone[fixed]{\myphone{}}
 \email{\myemail{}}
 \social[github]{ctastad}
