--- a/ctastad_cv_master.tex
+++ b/ctastad_cv_master.tex
@@ -1,5 +1,8 @@
+
+%-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
 %	PREAMBLE
+%-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
 
 \documentclass[10pt,letter,sans]{moderncv}
@@ -63,14 +66,13 @@ Taken together, I would appreciate further consideration and an opportunity to i
 \hfill \break{}
 
 \makeletterclosing{}
-
 \atsWorkAround{}
 
 \clearpage
 
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
-%   RESUME
+%   CV
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
 
@@ -78,7 +80,6 @@ Taken together, I would appreciate further consideration and an opportunity to i
 \makecvtitle{}
 
 \atsWorkAround{}
-
 \vspace{-1cm}
 
 \section{Education}
@@ -111,13 +112,14 @@ Bayesian Networks, Functional Linkage Networks}
 \cventry{May 2019 --- Present}{Department of OBGYN}{Graduate Research Assistant}{Minneapolis, MN}{Starr Lab}{%
     \begin{itemize}
         \item{Executed full rewrite of cancer gene web app; deployed new framework, reduced codebase, removed need for SQL database.}
-        \item{}
+        \item{Conducted Bioinformatic research into copy number variation within the Ovarian Cancer Precision Medicine Initiative dataset.}
+        \item{Leveraged comprehensive statistical and computational approach to study whole exome and single cell sequencing cancer data.}
 \end{itemize}}
 
 % load planner
 \cventry{Oct 2018 --- Present}{United Parcel Service}{Load Planning Engineer}{Minneapolis, MN}{Industrial Engineering}{%
     \begin{itemize}
-        \item{Central authority in coordinating all hub-wide load related functions; mediating hub, feeder, and engineering priorities.}
+        \item{Primary authority in coordinating all hub-wide load related functions; mediating hub, feeder, and engineering priorities.}
         \item{Advance district level interests through industrial engineering functions of operational, flow, and system analysis.}
         \item{Operate with a wide latitude in exploring opportunities for cost saving measures for management and stakeholders.}
 \end{itemize}}
@@ -220,6 +222,7 @@ Bayesian Networks, Functional Linkage Networks}
 
 %-------------------------------------------------------------------------------
 %	AWARDS
+%-------------------------------------------------------------------------------
 
 \section{Awards}
 
