--- a/ctastad_cv_master.tex
+++ b/ctastad_cv_master.tex
@@ -93,9 +93,9 @@ Taken together, I would appreciate further consideration and an opportunity to i
 
 \section{Skills}
 
-\cvitem{Languages}{\textsc{R}, \textsc{bash}, \textrm{\LaTeX}, \textsc{sql}, \textsc{html}, \textsc{css}, \textsc{xml}}
+\cvitem{Languages}{R, BASH, \LaTeX, SQL, HTML, CSS, XML, JSON}
 
-\cvitem{Platforms}{Linux, git, \textsc{nginx}, \textsc{apache}, HPC, virtualization, docker, Relational Databases, Oracle, wordpress}
+\cvitem{Platforms}{Linux (Ubuntu, RHEL, Centos), git, Nginx, Apache, HPC, virtualization, Docker, Oracle, Wordpress}
 
 \cvitem{Packages}{rmarkdown, shiny, ggplot2, dplyr, jsonlite, DT}
 
@@ -116,6 +116,7 @@ Taken together, I would appreciate further consideration and an opportunity to i
     \begin{itemize}
         \item{Executed full rewrite of cancer gene web app: deployed new framework, reduced codebase, removed need for SQL database.}
         \item{Applied bioinformatic focus into copy number variation on a largest of its kind single-cell sequencing human cancer dataset.}
+        \item{Developed full raw data to figure pipeline to automate analysis process, incorporating a modified HMM and FastCall algorithms.}
         \item{Leveraged comprehensive statistical and computational approach to study whole exome and single cell sequencing cancer data.}
 \end{itemize}}
 
@@ -133,7 +134,7 @@ Taken together, I would appreciate further consideration and an opportunity to i
     \begin{itemize}
         \item{Managed a team of 35 employees in largest operational unit in the Northern Plains District HQ sort hub.}
         \item{Delivered an immediate 15\% production increase to area within first month (representing 40\% of daily volume).}
-        \item{Developed never-before-seen improvement projects leading to missort elimination and training with disability access.}
+        \item{Developed novel improvement projects leading to elimination of package missorts and training with disability access.}
 \end{itemize}}
 
 % ups hourly
@@ -167,7 +168,7 @@ Taken together, I would appreciate further consideration and an opportunity to i
 \cventry{July 2012 --- Jan 2014}{Face to Face Organics LLC.}{Co-founder}{St.\ Anthony, MN}{}{%
     \begin{itemize}
         \item{Co-founded a personal care products start up that connected social activism with our product and its use.}
-        \item{Deployed company$'$s operating software stack on limited budget with minimal upfront cost and sustained overhead.}
+        \item{Deployed company$'$s operating software stack on limited budget with minimal upfront cost or sustained overhead.}
         \item{Established company systems around e-commerce, CRM, distribution, logistics, accounting, sales tracking, and inventory.}
 \end{itemize}}
 
