spell check and minor tweaks

--- a/ctastad_cv_master.tex
+++ b/ctastad_cv_master.tex
@@ -24,8 +24,8 @@
 \newcommand{\company}{***}
 \newcommand{\role}{***}
 
-% ATS work around
-\newcommand{\atsWorkAround}{{\fontsize{0.1}{0}\selectfont \transparent{0}{}}}
+% drone work around
+\newcommand{\droneWorkAround}{{\fontsize{0.1}{0}\selectfont \transparent{0}{}}}
 
 % contact info
 \name{Christopher}{Tastad}
@@ -66,7 +66,7 @@ Taken together, I would appreciate further consideration and an opportunity to i
 \hfill \break{}
 
 \makeletterclosing{}
-\atsWorkAround{}
+\droneWorkAround{}
 
 \clearpage
 
@@ -79,7 +79,7 @@ Taken together, I would appreciate further consideration and an opportunity to i
 \title{Resume}
 \makecvtitle{}
 
-\atsWorkAround{}
+\droneWorkAround{}
 \vspace{-1cm}
 
 \section{Education}
@@ -101,6 +101,8 @@ Taken together, I would appreciate further consideration and an opportunity to i
 
 \cvitem{Genomics}{samtools, bwa-mem, bedtools, Seurat, VarScan2, Excavator, DNAcopy, parallel, SummarizedExperiment}
 
+\cvitem{Algorithms}{Hidden Markov model, FastCall}
+
 \cvitem{Statistics}{Hypothesis testing, Simple/Multiple/Poisson Regression, A/B Testing, Contingency Testing, ANOVA, Survival Analysis, K-means, PCA, K-nearest neighbor, SVM, Bayesian Networks, Functional Linkage Networks}
 
 \cvitem{Benchwork}{DNA/RNA/protein isolation and analysis, western blotting, PCR, ELISA, luciferase, immunostaining, histology, epigenetic analysis, FACS, mammalian cell culture}
@@ -116,8 +118,7 @@ Taken together, I would appreciate further consideration and an opportunity to i
     \begin{itemize}
         \item{Executed full rewrite of cancer gene web app: deployed new framework, reduced codebase, removed need for SQL database.}
         \item{Applied bioinformatic focus into copy number variation on a largest of its kind single-cell sequencing human cancer dataset.}
-        \item{Developed full raw data to figure pipeline to automate analysis process, incorporating a modified HMM and FastCall algorithms.}
-        \item{Leveraged comprehensive statistical and computational approach to study whole exome and single cell sequencing cancer data.}
+        \item{Developed pipeline to automate analysis process from raw data to figures, incorporating HMM and FastCall algorithms.}
 \end{itemize}}
 
 % load planner
@@ -177,7 +178,7 @@ Taken together, I would appreciate further consideration and an opportunity to i
     \begin{itemize}
         \item{Performed basic science research with a focus in skeletal muscle development, receiving 4 co-authorships.}
         \item{Well versed in full spectrum of molecular biology, histology and cell biology wet lab techniques and diagnostics.}
-        \item{Authored significant writing efforts for group manuscripts and major grant awards, including a sucessful R01 bid.}
+        \item{Authored significant writing efforts for group manuscripts and major grant awards, including a successful R01 bid.}
 \end{itemize}}
 
 % 2004 teaching assistant
@@ -211,7 +212,7 @@ Taken together, I would appreciate further consideration and an opportunity to i
 % recwell
 \cventry{July 2017 --- July 2017}{University of Minnesota}{Youth Camp Racquetball Coach}{Minneapolis, MN}{Recwell}{}
 % shriners
-\cventry{Dec 2008 --- May 2013}{Shriners Hospital for Children}{Child Life Specialist}{Minneapolis, MN}{}{}
+\cventry{Dec 2008 --- May 2013}{Shriner's Hospital for Children}{Child Life Specialist}{Minneapolis, MN}{}{}
 % ducks unlimited
 \cventry{Nov 2008 --- July 2011}{Ducks Unlimited}{IT Consultant \& Umn Chapter Co-founder}{Edina, MN}{}{}
 % south africa
