--- a/ctastad_cv_master.tex
+++ b/ctastad_cv_master.tex
@@ -25,7 +25,7 @@
 \newcommand{\role}{***}
 
 % drone work around
-\newcommand{\droneWorkAround}{{\fontsize{0.1}{0}\selectfont \transparent{0}{}}}
+\newcommand{\droneWorkAround}{{\fontsize{0.1}{0}\selectfont \transparent{0}{.}}}
 
 % contact info
 \name{Christopher}{Tastad}
@@ -43,32 +43,32 @@
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
 
-\title{Letter}
-\recipient{HR Department}{\company{} \\ ADDRESS \\ CITY, STATE ZIP}
-\date{\today}
-\opening{To Whom It May Concern,}
-\closing{Sincerely,}
-\enclosure[Attached]{Resume}
-\makelettertitle{}
-
-% General opener
-I am interested in applying for the \role{} position with \company{}. With my background, I provide a unique blend of content knowledge, technical analysis, and relevant experience that make me a strong fit for the role. I have brought this aptitude together through a few core principles which I have applied in a diverse range of settings. Critical thinking and objectivity guide my approach; independence and competency carry to completion; and an attraction towards establishing effective systems elevates outcomes.
-
-% Asakura lab
-My first and most prominent experience was in stem cell development with a disease model of muscular dystrophy. As a research associate in The Stem Cell Institute, I worked in a central role through independent project coordination, grant and manuscript writing, lab member training, and overall lab management. While serving in this position, I employed strict research methodology and analysis to produce publication quality data. With that, I often presented and defended my efforts to both my primary investigator and the broader scientific community. The product of this work led to several co-authorships in high impact journals as well as being awarded individual grant monies with contributions to lab-wide grants.
-
-% Informatics for analysis
-Additionally, in recent history, I have focused in the study of handling large data sets, particularly in Bioinformatics. As an integrative field, I've brought my medical content knowledge forward with the development of advanced skill sets in statistical and computational modeling. By developing expertise in this area, I have drastically expanded the nature, flexibility, and application of the analytics capabilities that underline my scientific training. Most importantly, my ability to work with large data sets has become subject agnostic and can translate to any intensive technical task, all of which would be well suited to \company{}'s business objectives.
-
-% General closer
-Taken together, I would appreciate further consideration and an opportunity to interview with \company{} for the \role{} role. Please feel free to contact me at \myphone{} or \myemail{}.
-
-\hfill \break{}
-
-\makeletterclosing{}
-\droneWorkAround{}
-
-\clearpage
+%\title{Letter}
+%\recipient{HR Department}{\company{} \\ ADDRESS \\ CITY, STATE ZIP}
+%\date{\today}
+%\opening{To Whom It May Concern,}
+%\closing{Sincerely,}
+%\enclosure[Attached]{Resume}
+%\makelettertitle{}
+%
+%% General opener
+%I am interested in applying for the \role{} position with \company{}. With my background, I provide a unique blend of content knowledge, technical analysis, and relevant experience that make me a strong fit for the role. I have brought this aptitude together through a few core principles which I have applied in a diverse range of settings. Critical thinking and objectivity guide my approach; independence and competency carry to completion; and an attraction towards establishing effective systems elevates outcomes.
+%
+%% Asakura lab
+%My first and most prominent experience was in stem cell development with a disease model of muscular dystrophy. As a research associate in The Stem Cell Institute, I worked in a central role through independent project coordination, grant and manuscript writing, lab member training, and overall lab management. While serving in this position, I employed strict research methodology and analysis to produce publication quality data. With that, I often presented and defended my efforts to both my primary investigator and the broader scientific community. The product of this work led to several co-authorships in high impact journals as well as being awarded individual grant monies with contributions to lab-wide grants.
+%
+%% Informatics for analysis
+%Additionally, in recent history, I have focused in the study of handling large data sets, particularly in Bioinformatics. As an integrative field, I've brought my medical content knowledge forward with the development of advanced skill sets in statistical and computational modeling. By developing expertise in this area, I have drastically expanded the nature, flexibility, and application of the analytics capabilities that underline my scientific training. Most importantly, my ability to work with large data sets has become subject agnostic and can translate to any intensive technical task, all of which would be well suited to \company{}'s business objectives.
+%
+%% General closer
+%Taken together, I would appreciate further consideration and an opportunity to interview with \company{} for the \role{} role. Please feel free to contact me at \myphone{} or \myemail{}.
+%
+%\hfill \break{}
+%
+%\makeletterclosing{}
+%\droneWorkAround{}
+%
+%\clearpage
 
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
@@ -80,7 +80,7 @@ Taken together, I would appreciate further consideration and an opportunity to i
 \makecvtitle{}
 
 \droneWorkAround{}
-\vspace{-1cm}
+\vspace{-1.75cm}
 
 \section{Education}
 
@@ -95,7 +95,7 @@ Taken together, I would appreciate further consideration and an opportunity to i
 
 \cvitem{Languages}{R, BASH, \LaTeX, SQL, HTML, CSS, XML, JSON}
 
-\cvitem{Platforms}{Linux (Ubuntu, RHEL, Centos), git, Nginx, Apache, HPC, virtualization, Docker, Oracle, Wordpress}
+\cvitem{Platforms}{Linux (Ubuntu, RHEL, Centos), git, Nginx, Apache, HPC, AWS, Docker, Oracle, Wordpress}
 
 \cvitem{Packages}{rmarkdown, shiny, ggplot2, dplyr, jsonlite, DT}
 
@@ -178,7 +178,7 @@ Taken together, I would appreciate further consideration and an opportunity to i
     \begin{itemize}
         \item{Performed basic science research with a focus in skeletal muscle development, receiving 4 co-authorships.}
         \item{Well versed in full spectrum of molecular biology, histology and cell biology wet lab techniques and diagnostics.}
-        \item{Authored significant writing efforts for group manuscripts and major grant awards, including a successful R01 bid.}
+        \item{Authored significant writing efforts for group manuscripts and major grant awards, including a sucessful R01 bid.}
 \end{itemize}}
 
 % 2004 teaching assistant
@@ -215,6 +215,8 @@ Taken together, I would appreciate further consideration and an opportunity to i
 \cventry{Dec 2008 --- May 2013}{Shriner's Hospital for Children}{Child Life Specialist}{Minneapolis, MN}{}{}
 % ducks unlimited
 \cventry{Nov 2008 --- July 2011}{Ducks Unlimited}{IT Consultant \& Umn Chapter Co-founder}{Edina, MN}{}{}
+% umems
+\cventry{Oct 2008 --- May 2010}{University Emergency Medical Services}{EMT}{Minneapolis, MN}{}{}
 % south africa
 \cventry{June 2009 --- July 2009}{Student Travel and Exposure South Africa}{Trauma Ward Aide}{Cape Town, South Africa}{}{}
 
