--- a/ctastad_cv_master.tex
+++ b/ctastad_cv_master.tex
@@ -11,7 +11,7 @@
 
 % packages
 \usepackage[utf8]{inputenc}
-\usepackage[scale=0.8]{geometry}
+\usepackage[scale=0.85]{geometry}
 
 \usepackage{textcomp}
 \usepackage{anyfontsize}
@@ -95,7 +95,7 @@
 
 \cvitem{Languages}{R, BASH, \LaTeX, SQL, HTML, CSS, XML, JSON}
 
-\cvitem{Platforms}{Linux (Ubuntu, RHEL, Centos), git, Nginx, Apache, HPC, AWS, Docker, Oracle, Wordpress}
+\cvitem{Platforms}{Linux (Ubuntu, RHEL, CentOS), git, Nginx, Apache, HPC, AWS, Docker, Oracle, WordPress}
 
 \cvitem{Packages}{rmarkdown, shiny, ggplot2, dplyr, jsonlite, DT}
 
@@ -103,7 +103,7 @@
 
 \cvitem{Algorithms}{Hidden Markov model, FastCall}
 
-\cvitem{Statistics}{Hypothesis testing, Simple/Multiple/Poisson Regression, A/B Testing, Contingency Testing, ANOVA, Survival Analysis, K-means, PCA, K-nearest neighbor, SVM, Bayesian Networks, Functional Linkage Networks}
+\cvitem{Statistics}{Hypothesis testing, Simple/Multiple/Poisson Regression, A/B Testing, Contingency Testing, ANOVA, Survival Analysis, K-means, PCA, K-nearest neighbor}
 
 \cvitem{Benchwork}{DNA/RNA/protein isolation and analysis, western blotting, PCR, ELISA, luciferase, immunostaining, histology, epigenetic analysis, FACS, mammalian cell culture}
 
@@ -114,15 +114,15 @@
 \section{Experience}
 
 % starrlab research assistant
-\cventry{May 2019 --- Present}{Department of OBGYN}{Graduate Research Assistant}{Minneapolis, MN}{Starr Lab}{%
+\cventry{May 2019 --- Present}{University of Minnesota Dept.\ of OBGYN}{Graduate Research Assistant}{Minneapolis, MN}{Starr Lab}{%
     \begin{itemize}
-        \item{Executed full rewrite of cancer gene web app: deployed new framework, reduced codebase, removed need for SQL database.}
+        \item{Executed full stack rewrite of cancer gene web app: deployed new framework, reduced codebase, removed need for SQL database.}
         \item{Applied bioinformatic focus into copy number variation on a largest of its kind single-cell sequencing human cancer dataset.}
         \item{Developed pipeline to automate analysis process from raw data to figures, incorporating HMM and FastCall algorithms.}
 \end{itemize}}
 
 % load planner
-\cventry{Oct 2018 --- Present}{United Parcel Service}{Load Planning Engineer}{Minneapolis, MN}{Industrial Engineering}{%
+\cventry{Oct 2018 --- Present}{UPS}{Load Planning Engineer}{Minneapolis, MN}{Industrial Engineering}{%
     \begin{itemize}
         \item{Primary authority in guiding all load functions for 112 outbound doors; mediating hub, feeder, and engineering priorities.}
         \item{Advance district level interests through industrial engineering technologies for operational, flow, and system analysis.}
@@ -131,7 +131,7 @@
 \end{itemize}}
 
 % ups supervisor
-\cventry{Oct 2017 --- Oct 2018}{United Parcel Service}{Supervisor}{Minneapolis, MN}{Small Sort}{%
+\cventry{Oct 2017 --- Oct 2018}{UPS}{Supervisor}{Minneapolis, MN}{Small Sort}{%
     \begin{itemize}
         \item{Managed a team of 35 employees in largest operational unit in the Northern Plains District HQ sort hub.}
         \item{Delivered an immediate 15\% production increase to area within first month (representing 40\% of daily volume).}
@@ -139,7 +139,7 @@
 \end{itemize}}
 
 % ups hourly
-\cventry{June 2017 --- Oct 2017}{United Parcel Service}{Package Sorter}{Minneapolis, MN}{}{}
+\cventry{June 2017 --- Oct 2017}{UPS}{Package Sorter}{Minneapolis, MN}{}{}
 
 % nmdp research assistant
 \cventry{Jan 2016 --- July 2017}{National Marrow Donor Program}{Graduate Research Assistant}{Minneapolis, MN}{Bioinformatics}{%
@@ -178,7 +178,7 @@
     \begin{itemize}
         \item{Performed basic science research with a focus in skeletal muscle development, receiving 4 co-authorships.}
         \item{Well versed in full spectrum of molecular biology, histology and cell biology wet lab techniques and diagnostics.}
-        \item{Authored significant writing efforts for group manuscripts and major grant awards, including a sucessful R01 bid.}
+        \item{Authored significant writing efforts for group manuscripts and major grant awards, including a successful R01 bid.}
 \end{itemize}}
 
 % 2004 teaching assistant
