--- a/ctastad_cv_master.tex
+++ b/ctastad_cv_master.tex
@@ -55,10 +55,10 @@
 %I am interested in applying for the \role{} position with \company{}. With my background, I provide a unique blend of content knowledge, technical analysis, and relevant experience that make me a strong fit for the role. I have brought this aptitude together through a few core principles which I have applied in a diverse range of settings. Critical thinking and objectivity guide my approach; independence and competency carry to completion; and an attraction towards establishing effective systems elevates outcomes.
 %
 %% Asakura lab
-%My first and most prominent experience was in stem cell development with a disease model of muscular dystrophy. As a research associate in The Stem Cell Institute, I worked in a central role through independent project coordination, grant and manuscript writing, lab member training, and overall lab management. While serving in this position, I employed strict research methodology and analysis to produce publication quality data. With that, I often presented and defended my efforts to both my primary investigator and the broader scientific community. The product of this work led to several co-authorships in high impact journals as well as being awarded individual grant monies with contributions to lab-wide grants.
+%My path toward data science began in basic science working in stem cell development with a disease model of muscular dystrophy. As a research associate in The Stem Cell Institute, I worked in a central role through independent project coordination, grant and manuscript writing, lab member training, and overall lab management. While serving in this position, I employed strict research methodology and analysis to produce publication quality data. With that, I often presented and defended my efforts to both my primary investigator and the broader scientific community. The product of this work led to several co-authorships in high impact journals as well as being awarded individual grant monies with contributions to lab-wide grants.
 %
 %% Informatics for analysis
-%Additionally, in recent history, I have focused in the study of handling large data sets, particularly in Bioinformatics. As an integrative field, I've brought my medical content knowledge forward with the development of advanced skill sets in statistical and computational modeling. By developing expertise in this area, I have drastically expanded the nature, flexibility, and application of the analytics capabilities that underline my scientific training. Most importantly, my ability to work with large data sets has become subject agnostic and can translate to any intensive technical task, all of which would be well suited to \company{}'s business objectives.
+%In recent history, I have focused in the study of handling large genetic data sets, particularly in Cancer Biology. As an integrative field, I've brought my medical content knowledge forward with the development of advanced skill sets in statistical and computational modeling. By developing expertise in this area, I have drastically expanded the nature, flexibility, and application of the analytics capabilities that underline my scientific training. Most importantly, my ability to work with large data sets has become subject agnostic and can translate to any intensive technical task, all of which would be well suited to \company{}'s business objectives.
 %
 %% General closer
 %Taken together, I would appreciate further consideration and an opportunity to interview with \company{} for the \role{} role. Please feel free to contact me at \myphone{} or \myemail{}.
@@ -66,7 +66,6 @@
 %\hfill \break{}
 %
 %\makeletterclosing{}
-%\droneWorkAround{}
 %
 %\clearpage
 
@@ -80,7 +79,7 @@
 \makecvtitle{}
 
 \droneWorkAround{}
-\vspace{-1.75cm}
+\vspace{-1cm}
 
 \section{Education}
 
@@ -103,7 +102,7 @@
 
 \cvitem{Algorithms}{Hidden Markov model, FastCall}
 
-\cvitem{Statistics}{Hypothesis testing, Simple/Multiple/Poisson Regression, A/B Testing, Contingency Testing, ANOVA, Survival Analysis, K-means, PCA, K-nearest neighbor}
+\cvitem{Statistics}{Hypothesis testing, Simple/Multiple/Poisson Regression, Hidden Markov Model, A/B Testing, Contingency Testing, ANOVA, Survival Analysis, K-means, PCA, K-nearest neighbor}
 
 \cvitem{Benchwork}{DNA/RNA/protein isolation and analysis, western blotting, PCR, ELISA, luciferase, immunostaining, histology, epigenetic analysis, FACS, mammalian cell culture}
 
@@ -116,7 +115,7 @@
 % starrlab research assistant
 \cventry{May 2019 --- Present}{University of Minnesota Dept.\ of OBGYN}{Graduate Research Assistant}{Minneapolis, MN}{Starr Lab}{%
     \begin{itemize}
-        \item{Executed full stack rewrite of cancer gene web app: deployed new framework, reduced codebase, removed need for SQL database.}
+        \item{Executed full rewrite of cancer gene web app: deployed new framework, reduced codebase, removed need for SQL database.}
         \item{Applied bioinformatic focus into copy number variation on a largest of its kind single-cell sequencing human cancer dataset.}
         \item{Developed pipeline to automate analysis process from raw data to figures, incorporating HMM and FastCall algorithms.}
 \end{itemize}}
