updated title for starr lab

--- a/ctastad_cv_master.tex
+++ b/ctastad_cv_master.tex
@@ -113,7 +113,7 @@
 \section{Experience}
 
 % starrlab research assistant
-\cventry{May 2019 --- Present}{University of Minnesota Dept.\ of OBGYN}{Graduate Research Assistant}{Minneapolis, MN}{Starr Lab}{%
+\cventry{May 2019 --- Present}{University of Minnesota Dept.\ of OBGYN}{Bioinformatician}{Minneapolis, MN}{Starr Lab}{%
     \begin{itemize}
         \item{Executed full rewrite of cancer gene web app: deployed new framework, reduced codebase, removed need for SQL database.}
         \item{Applied bioinformatic focus into copy number variation on a largest of its kind single-cell sequencing human cancer dataset.}
